[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"
name = "act_play"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

act-zero = {version = "0.4", features = ["default-tokio"]}
tokio = {version = "1.0", features = ["full"]}
