[package]
authors = ["Praveen Perera <praveen@avencera.com>"]
edition = "2018"
name = "act_play"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

act-zero = {version = "0.4", features = ["default-tokio"]}
tokio = {version = "1.0", features = ["full"]}

tracing-opentelemetry = "0.22.0"

tracing-log = "0.2"
async-trait = "0.1.56"
criterion = { version = "0.5.1", default-features = false, features = ["html_reports"] }
opentelemetry = { version = "0.21.0", features = ["trace", "metrics"] }
opentelemetry_sdk = { version = "0.21.0", default-features = false, features = ["trace", "rt-tokio"] }
opentelemetry-jaeger = "0.20.0"
opentelemetry-stdout = { version = "0.2.0", features = ["trace", "metrics"] }
opentelemetry-otlp = { version = "0.14.0", features = ["metrics"] }
opentelemetry-semantic-conventions = "0.13.0"
futures-util = { version = "0.3", default-features = false }
tokio-stream = "0.1"
tracing = { version = "0.1.35", default-features = false, features = ["std", "attributes"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.0", default-features = false, features = ["registry", "std", "fmt", "env-filter"] }
